# derive-insert

./: Cargo.toml  README.md
impl/: Cargo.toml  README.md
impl/src/: lib.rs
src/: lib.rs
tests/: simple.rs  trivial.rs
