[package]
name = "derive-insert-impl"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "An internal crate used for derive-insert crate."
readme = "README.md"
repository = "https://github.com/wada314/derive-insert"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.90"
